--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Ecommerce</title>
   </head>
-  <body style="background-color: #1f2328;">
+  <body style="background-color: #0d1117;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
